--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "memory": "cpp"
+        "memory": "cpp",
+        "vector": "cpp",
+        "__split_buffer": "cpp",
+        "type_traits": "cpp"
     }
 }
